@@ -1,3 +1,9 @@
+2002-05-17  Damon Chaplin  <damon@ximian.com>
+
+	* src/file-manager/fm-list-view.c (key_press_callback): new function
+	to activate the selected items when Return is pressed, to match the
+	icon view. Fixes bug #74976.
+
 2002-05-15  Alex Larsson  <alexl@redhat.com>
 
 	* MAINTAINERS:
